# Heap-Allocator

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: block.c.DBFA833D1B94ABBA.idx  block.h.1EC9A7767550C91F.idx  heapm.c.16B7EFF5A0BF9656.idx  heapm.h.47EB92CECC6D8481.idx  main.c.717836357F22398F.idx
include/: block.h  bucket.h  heapm.h
performance_tests/: CMakeLists.txt  main.c
performance_tests/.cache/clangd/index/: main.c.277A9A3AB0EFD5AF.idx
src/: block.c  block_utils.c  free_block_finder.c  free_list.c  heapm.c
tests/: CMakeLists.txt  test_block.c
tests/.cache/clangd/index/: test_block.c.230751CFB17A2C6E.idx
